# Huli

./: .gitignore  CMakeLists.txt  LICENSE  README.md  config.h.in  huli.qrc
res/data/: defaultSearchProviders.xml  defaultToolbarLayout.xml
src/: globals.h  main.cpp
src/App/: AddressBarLayoutLoader.cpp  CLIParser.cpp  CLIParser.h  Config.cpp  Config.h  SearchEngine.cpp  SearchEngine.h  Settings.cpp  Settings.h  Window.cpp  Window.h
src/Suggestions/: AbstactSuggestionProvider.h  PopupObject.cpp  PopupObject.h  SuggestionEnum.h  suggestion.cpp  suggestion.h
src/Suggestions/Providers/: DuckDuckGoProvider.cpp  DuckDuckGoProvider.h  GoogleProvider.cpp  GoogleProvider.h
src/Util/: fontUtils.cpp  fontUtils.h  getFilenameFromPath.cpp  getFilenameFromPath.h  iconProvider.cpp  iconProvider.h  urlValidation.cpp  urlValidation.h
src/Web/: BrowserBase.cpp  BrowserBase.h  PopupWebView.cpp  SearchEngine.cpp  SearchEngine.h  WebPage.cpp  WebPage.h
src/Web/Downloads/: DownloadItem.cpp  DownloadItem.h  DownloadManager.cpp  DownloadManager.h
src/Web/Popups/: PopupWebView.cpp  PopupWebView.h  PopupWindow.cpp  PopupWindow.h
src/Web/WebView/: WebPage.cpp  WebPage.h  WebView.cpp  WebView.h
src/Widgets/: AddressBar.cpp  AddressBar.h  AddressBarInput.cpp  AddressBarInput.h  DownloadItem.cpp  DownloadItem.h  DownloadManager.cpp  DownloadManager.h  PopupWindow.cpp  PopupWindow.h  TabBar.cpp  TabBar.h  Tabs.cpp  Tabs.h  ViewContainer.cpp  ViewContainer.h  WebView.cpp  WebView.h
src/Widgets/AddressBar/: AddressBar.cpp  AddressBar.h  AddressBarInput.cpp  AddressBarInput.h  AddressBarLayoutLoader.cpp  AddressBarLayoutLoader.h
src/Widgets/Tabs/: TabBar.cpp  TabBar.h  Tabs.cpp  Tabs.h  ViewContainer.cpp  ViewContainer.h
